--- a/ProjectCleanup/Forms/frmProjectCleanup.xaml
+++ b/ProjectCleanup/Forms/frmProjectCleanup.xaml
@@ -31,12 +31,12 @@
             <Button x:Name="btnNone" Content="Check None" Width="90" Height="25" HorizontalAlignment="Right" Click="btnNone_Click" Margin="0,10,0,0"/>
         </StackPanel>
         <Label Grid.Row="2" Content="Select sheet groups to delete:"/>
-        <ListBox Grid.Row="3" Margin="5,0,0,0" ItemsSource="{Binding groupNames}">
+        <ListBox x:Name="lbxGroups" Grid.Row="3" Margin="5,0,0,0" >
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
                         <CheckBox Margin="5" IsChecked="{Binding IsSelected, Mode=TwoWay}" />
-                        <TextBlock Text="{Binding ItemName}" />
+                        <TextBlock Text="{Binding}" />
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
