--- a/ProjectCleanup/Forms/frmProjectCleanup.xaml
+++ b/ProjectCleanup/Forms/frmProjectCleanup.xaml
@@ -31,16 +31,20 @@
             <Button x:Name="btnNone" Content="Check None" Width="90" Height="25" HorizontalAlignment="Right" Click="btnNone_Click" Margin="0,10,0,0"/>
         </StackPanel>
         <Label Grid.Row="2" Content="Select sheet groups to delete:"/>
-        <ListBox x:Name="lbxGroups" Grid.Row="3" Margin="5,0,0,0" >
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <CheckBox Margin="5" IsChecked="{Binding IsSelected, Mode=TwoWay}" />
-                        <TextBlock Text="{Binding}" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>        
+        <DataGrid x:Name="grpData" Grid.Row="3"
+                  GridLinesVisibility="All"
+                  AlternatingRowBackground="AliceBlue"
+                  CanUserAddRows="False"
+                  CanUserReorderColumns="False"
+                  SelectionMode="Extended"
+                  AutoGenerateColumns="False"
+                  EnableRowVirtualization="False"
+                  EnableColumnVirtualization="False" Grid.ColumnSpan="2">
+            <DataGrid.Columns>
+                <DataGridCheckBoxColumn Width="100"/>
+                <DataGridTextColumn Width="*" Binding="{Binding}"/>                
+            </DataGrid.Columns>
+        </DataGrid>      
         <StackPanel Grid.Row="4">
             <CheckBox x:Name="chbViews" Grid.Row="4" VerticalAlignment="Center" Content="Delete unused views" Margin="5,5,0,5"/>
             <CheckBox x:Name="chbSchedules" Grid.Row="5" VerticalAlignment="Center" Margin="5,0,0,5" Content="Delete unused schedules"/>
