--- a/ProjectCleanup/Forms/frmProjectCleanup.xaml
+++ b/ProjectCleanup/Forms/frmProjectCleanup.xaml
@@ -5,15 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ProjectCleanup"
              mc:Ignorable="d" 
-             d:DesignWidth="380" d:DesignHeight="440"  Title="Project Cleanup" MinWidth="360" MinHeight="380">
+             d:DesignWidth="380" d:DesignHeight="520"  Title="Project Cleanup" MinWidth="360" MinHeight="380">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="110"/>
-            <RowDefinition Height="5"/>
+            <RowDefinition Height="190"/>
+            <RowDefinition Height="10"/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -41,15 +41,20 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <StackPanel Grid.Row="4">
-            <CheckBox x:Name="chbViews" Grid.Row="4" VerticalAlignment="Center" Content="Delete unused views" Margin="5,5,0,5"/>
-            <CheckBox x:Name="chbSchedules" Grid.Row="5" VerticalAlignment="Center" Margin="5,0,0,5" Content="Delete unused schedules"/>
-            <CheckBox x:Name="chbSchedRename" Grid.Row="6" VerticalAlignment="Center" Margin="5,0,0,5" Content="Rename Schedules"/>
-            <CheckBox x:Name="chbCode" Grid.Row="7" VerticalAlignment="Center" Content="Clean plan code" Margin="5,0,0,5"/>
-            <CheckBox x:Name="chbSheets" Grid.Row="8" VerticalAlignment="Center" Margin="5,0,0,0" Content="Clean sheet names" />
+            <CheckBox x:Name="chbViews" VerticalAlignment="Center" Content="Delete unused views" Margin="5,5,0,5"/>
+            <CheckBox x:Name="chbSchedules" VerticalAlignment="Center" Margin="5,0,0,5" Content="Delete unused schedules"/>
+            <CheckBox x:Name="chbSchedRename" VerticalAlignment="Center" Margin="5,0,0,5" Content="Rename Schedules"/>
+            <CheckBox x:Name="chbCode" VerticalAlignment="Center" Content="Clean plan code" Margin="5,0,0,5"/>
+            <CheckBox x:Name="chbSheets" VerticalAlignment="Center" Margin="5,0,0,5" Content="Clean sheet names" />
+            <CheckBox x:Name="chbRoomTag" VerticalAlignment="Center" Margin="5,0,0,5" Content="Update room tag"/>
+            <CheckBox x:Name="chbFamilies" VerticalAlignment="Center" Margin="5,0,0,5" Content="Update families"/>
+            <CheckBox x:Name="chbLinestyles" VerticalAlignment="Center" Content="Correct linestyles" Margin="5,0,0,5"/>
+            <CheckBox x:Name="chbElectrical" VerticalAlignment="Center" Margin="5,0,0,0" Content="Clean electrical families" />
         </StackPanel>        
         <StackPanel Grid.Row="10" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button x:Name="btnOK" Width="90" Height="25" Margin="0,0,5,0" Content="OK" Click="btnOK_Click"/>
-            <Button x:Name="btnCancel" Width="90" Margin="5,0,0,0" Content="Cancel" Height="25" Click="btnCancel_Click"/>
+            <Button x:Name="btnCancel" Width="90" Margin="5,0,5,0" Content="Cancel" Height="25" Click="btnCancel_Click"/>
+            <Button x:Name="btnHelp" Width="90" Height="25" Margin="5,0,0,0" Content="Help" Click="btnHelp_Click"/>
         </StackPanel>        
     </Grid>
 </Window>
